Atualizando dados do curso

--- a/Estudando/styles.css
+++ b/Estudando/styles.css
@@ -136,4 +136,13 @@ h2 {
     background-size: cover;
 }
 
-/*  */
+/* text align */
+.text-aligned{
+    text-align: right;
+}
+
+.container-center {
+    text-align: center;
+    width: 300px;
+    border: 1px solid black;
+}
