--- a/Estudando/DesafioCSS/styles.css
+++ b/Estudando/DesafioCSS/styles.css
@@ -1,5 +1,5 @@
 #box-model-desafio {
-    margin: 10px;
+    padding: 10px;
     margin: 10px;
     border: 1px solid red;
     outline: 1px solid blue;
