--- a/Curso/Projeto-3/css/styles.css
+++ b/Curso/Projeto-3/css/styles.css
@@ -21,8 +21,10 @@ p{
 .navbar-container{
     width: 100%;
     height: 80px;
-    background-color: #393f44;
+    background-color: #1f2325;
     padding: 0 2rem;
+    position: sticky;
+    top: 0px;
 }
 
 nav {
